feat: implement search feature for loker,pd,ptk and fix bug on loker resource and icon
