# app/Http/Resources/LokerResource.php
@@ -14,9 +14,26 @@ use Illuminate\Support\Facades\File;
  *     @OA\Property(property="id_loker", type="integer", example=1),
  *     @OA\Property(property="loker_thumbnail", type="string", example="img/loker/image.png"),
  *     @OA\Property(property="loker_type", type="string", example="Kasir/Sales/Marketing"),
- *     @OA\Property(property="position_id", type="string", example="Operator/Engineer/Finance"),
- *     @OA\Property(property="kemitraan_id", type="string", example="Inafood/Honda/Mayora"),
- *     @OA\Property(property="loker_available", type="string", example="Tersedia/Tidak Tersedia"),
+ *     
+ *     @OA\Property(
+ *         property="position",
+ *         type="object",
+ *         @OA\Property(property="id_position", type="integer", example=1),
+ *         @OA\Property(property="position_name", type="string", example="Operator"),
+ *         @OA\Property(property="position_type", type="string", example="Full-time"),
+ *     ),
+ *     
+ *     @OA\Property(
+ *         property="kemitraan",
+ *         type="object",
+ *         @OA\Property(property="id_kemitraan", type="integer", example=1),
+ *         @OA\Property(property="kemitraan_name", type="string", example="Inafood"),
+ *         @OA\Property(property="kemitraan_description", type="string", example="A partnership with Inafood"),
+ *         @OA\Property(property="kemitraan_logo", type="string", example="img/kemitraan/logo.png"),
+ *         @OA\Property(property="kemitraan_thumbnail", type="string", example="img/kemitraan/thumbnail.png"),
+ *     ),
+ *     
+ *     @OA\Property(property="loker_available", type="string", example="Tersedia"),
  * )
  */
 class LokerResource extends JsonResource
@@ -35,8 +52,18 @@ class LokerResource extends JsonResource
             'id_loker' => $this->id_loker,
             'loker_thumbnail' => $loker_thumbnail,
             'loker_type' => $this->loker_type,
-            'position_id' => $this->position_id,
-            'kemitraan_id' => $this->kemitraan_id,
+            'position' => [
+                'id_position' => $this->position->id_position,
+                'position_name' => $this->position->position_name,
+                'position_type' => $this->position->position_type,
+            ],
+            'kemitraan' => [
+                'id_kemitraan' => $this->kemitraan->id_kemitraan,
+                'kemitraan_name' => $this->kemitraan->kemitraan_name,
+                'kemitraan_description' => $this->kemitraan->kemitraan_description,
+                'kemitraan_logo' => $this->kemitraan->kemitraan_logo,
+                'kemitraan_thumbnail' => $this->kemitraan->kemitraan_thumbnail,
+            ],
             'loker_available' => $this->loker_available,
         ];
     }
